<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dexterous</string>
    <string name="title_section1">Pokedex</string>
    <string name="title_section2">Pokedex:Missing</string>
    <string name="title_section3">Pokedex:Caught</string>
    <string name="title_section4">Living Dex: Missing</string>
    <string name="title_section5">Living Dex: Caught</string>
    <string name="title_section6">My Team</string>
    <string name="title_section7">Moves</string>
    <string name="title_section8">Pokemon By Type</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_redownloadInfo">Redownload Pokemon sprites</string>
    <string name="action_settings">Settings</string>
    <string name="action_backup">Backup Pokedex markers</string>
    <string name="action_restore">Restore Pokedex markers</string>
    <string name="title_activity_pokemon_details">Dexterous</string>
    <string name="title_activity_ivcalculator">IV Calculator</string>
    <string name="action_ivcalc">IV calculator</string>
    <string name="action_prev">Previous</string>
    <string name="action_next">Next</string>
    <string name="action_breedingtools">Breeding Tools</string>
    <string name="action_battletools">Battle Tools</string>
    <string name="action_teambuilder">Team Builder</string>
    <string name="title_activity_poke_details_tabs">Dexterous</string>
    <string name="title_activity_breeding_tools">Breeding Tools</string>
    <string name="title_activity_battle_tools">Battle Tools</string>
    <string name="title_activity_team_builder">Team Builder</string>
    <string name="empty"> </string>
    <string name="action_delete">Delete Team</string>
    <string name="title_activity_preferences">Dexterous</string>

    <string name="app_descriptions"><a href="http://mattsaunders.info/dexterous">Dexterous</a> is a Pokedex and Pokemon tools app, built using a free database and resources from around the web\n - created by <a href="http://mattsaunders.info">Matt Saunders</a></string>
    <string name="app_credits">Thanks to: \n<a href="https://veekun.com">Eevee (Veekun)</a> for the <a href="https://github.com/veekun/pokedex">database</a> \n<a href="http://gabmadrid.com/">Gab Madrid</a> for the <a href="http://gabmadrid.com/portfolio/pokemon-app-icon-set/">Pokedex icon</a> \n<a href="http://tamarinfrog.deviantart.com/">TamarinFrog</a> for the <a href="http://tamarinfrog.deviantart.com/art/All-Poke-Balls-Free-Icons-368996730">Pokeball icons</a></string>
    <string name="app_copyright">App © 2014–2015 Matt Saunders. \n\nPokémon ©1995–2015 <a href="http://www.pokemon.com/">Pokémon</a>, <a href="http://www.nintendo.com/">Nintendo</a>, <a href="http://www.gamefreak.co.jp/">Game Freak</a>, <a href="http://www.creatures.co.jp/html/en/">Creatures</a></string>
    <string name="app_version">1.0.2</string>

</resources>
