<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/action_openBreedingTools" android:title="@string/action_breedingtools"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/action_openBattleTools" android:title="@string/action_battletools"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/action_openTeamBuilder" android:title="@string/action_teambuilder"
        android:orderInCategory="100" android:showAsAction="never" />
</menu>
